ajout SB types isometric et bodyweight ds la liste